--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <!-- Header y navegación -->
   <header>
     <h1>Proyecto Paisa Roleplay</h1>
     <nav>
@@ -14,19 +15,47 @@
       <a href="normativas.html">Normativas</a>
       <a href="reportar.html">Reportar</a>
       <a href="panel.html">Panel Staff</a>
+      <a href="vips.html">VIPS</a>
+      <a href="updates.html">Actualizaciones</a>
     </nav>
   </header>
+
+  <!-- Sección de bienvenida -->
   <main>
     <section class="bienvenida">
-      <h2>Bienvenido al sistema de reportes</h2>
-      <p>Accedé con Discord para reportar usuarios o revisar casos asignados.</p>
+      <h2>Bienvenido al sistema oficial del servidor</h2>
+      <p>Accedé con Discord para reportar usuarios, revisar casos asignados y consultar toda la información del servidor.</p>
       <button id="login-btn">Iniciar sesión con Discord</button>
     </section>
+
+    <!-- Últimas actualizaciones -->
+    <section class="updates">
+      <h2>Últimas Actualizaciones</h2>
+      <ul>
+        <li>04/01/2026 - Página oficial lanzada online</li>
+        <li>03/01/2026 - Ajustes en el sistema de reportes</li>
+        <li>02/01/2026 - Se añadieron nuevas reglas en normativas</li>
+        <li>01/01/2026 - Sistema VIP actualizado con nuevos rangos</li>
+      </ul>
+    </section>
+
+    <!-- Información rápida -->
+    <section class="info-rapida">
+      <h2>Información del Servidor</h2>
+      <p>En la sección de Normativas encontrarás todas las reglas estrictas del servidor. 
+      En la sección VIP, los rangos especiales y sus beneficios IC. 
+      Los reportes se registran automáticamente en nuestro sistema y se pueden consultar en el Panel Staff.</p>
+    </section>
   </main>
+
+  <!-- Footer -->
   <footer>
     <p>© 2026 Proyecto Paisa Roleplay – Todos los derechos reservados</p>
   </footer>
 
+  <!-- Script principal -->
   <script type="module" src="js/main.js"></script>
 </body>
 </html>
+
+
