--- a/normativas.html
+++ b/normativas.html
@@ -3,55 +3,109 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Normativa Staff - Paisa RP</title>
+  <title>Normativas - Proyecto Paisa RP</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header>
-    <h1>Normativa Staff</h1>
-    <nav>
-      <a href="index.html">Inicio</a>
-      <a href="normativas.html">Normativas</a>
-      <a href="reportar.html">Reportar</a>
-      <a href="panel.html">Panel Staff</a>
-    </nav>
-  </header>
+<header>
+  <h1>Normativas del Servidor</h1>
+  <nav>
+    <a href="index.html">Inicio</a>
+    <a href="normativas.html">Normativas</a>
+    <a href="reportar.html">Reportar</a>
+    <a href="panel.html">Panel Staff</a>
+    <a href="vips.html">VIPS</a>
+    <a href="updates.html">Actualizaciones</a>
+  </nav>
+</header>
 
-  <main>
-    <section>
-      <h2>Roles y colores</h2>
-      <ul>
-        <li><strong>AY</strong> – Rojo (solo lectura)</li>
-        <li><strong>MOD</strong> – Naranja</li>
-        <li><strong>GO</strong> – Verde</li>
-        <li><strong>Enc FL</strong> – Gris</li>
-        <li><strong>Enc FIL</strong> – Morado</li>
-      </ul>
-    </section>
+<main>
+  <section>
+    <h2>Reglas Generales</h2>
+    <ul>
+      <li>Respeto absoluto a todos los jugadores y staff.</li>
+      <li>Prohibido cualquier tipo de cheat o hack.</li>
+      <li>Spam, publicidad o contenido inapropiado será sancionado severamente.</li>
+      <li>Suplantación de identidad de staff o jugadores está prohibida.</li>
+      <li>Exploit o glitch intencional → sanción inmediata.</li>
+    </ul>
+  </section>
 
-    <section>
-      <h2>Advertencias</h2>
-      <p>El staff puede recibir advertencias según su comportamiento:</p>
-      <ul>
-        <li>Adv 1: Primera advertencia</li>
-        <li>Adv 2: Segunda advertencia</li>
-        <li>Adv 3: Tercera advertencia – Posible suspensión o despido</li>
-      </ul>
-    </section>
+  <section>
+    <h2>Tiempo Sanciones</h2>
 
-    <section>
-      <h2>Funciones del staff</h2>
-      <ul>
-        <li>Revisar reportes asignados</li>
-        <li>Cerrar reportes (solo encargados)</li>
-        <li>Lectura de reportes (AY)</li>
-        <li>Seguir las normas internas y lineamientos del proyecto</li>
-      </ul>
-    </section>
-  </main>
+    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐋𝐄𝐕𝐄𝐒</h3>
+    <ul>
+      <li>MUD / MUR / MUB / MUPM / MUA: 15 MIN</li>
+      <li>RK / TK / FK: 15 MIN</li>
+      <li>FA: 15 MIN</li>
+      <li>LA: 15 MIN</li>
+      <li>DB: 15 MIN</li>
+      <li>TA: 15 MIN</li>
+      <li>TTO: 15 MIN</li>
+      <li>MUD (repetido): 20 MIN</li>
+    </ul>
 
-  <footer>
-    <p>© 2026 Proyecto Paisa Roleplay – Todos los derechos reservados</p>
-  </footer>
+    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐌𝐄𝐃𝐈𝐀𝐒</h3>
+    <ul>
+      <li>TROLL / CJ / BH / BJ / BD / TK: 25 MIN</li>
+      <li>ZZ: 15 MIN</li>
+      <li>AHQ: 25 MIN</li>
+      <li>AZS: 25 MIN</li>
+      <li>IHQ: 30 MIN</li>
+      <li>CK: 20 MIN</li>
+      <li>AA2: 25 MIN</li>
+      <li>NRE / NRH / NRC: 25 MIN</li>
+      <li>FLOOD: 20 MIN (más si es excesivo)</li>
+      <li>NVVPJ: 35 MIN</li>
+      <li>CA: 30 MIN</li>
+      <li>DM: 30 MIN</li>
+      <li>RSL: 20 MIN</li>
+      <li>NA: 20 MIN</li>
+      <li>IDS: 20 MIN</li>
+      <li>Abuso del canal OOC / Cortar rol: 20 MIN</li>
+      <li>MG / MG2: 25 MIN</li>
+      <li>NIP: 30 MIN</li>
+      <li>LA2: 20 MIN</li>
+      <li>PG / PG2: 30 MIN</li>
+      <li>ICN: 30 MIN</li>
+      <li>Flamming / IOOC: 35 MIN</li>
+      <li>BA: 25–40 MIN (depende de la gravedad)</li>
+      <li>VDM / DM: 30 MIN</li>
+      <li>MR / MK: 25 MIN</li>
+      <li>PI: 30 MIN</li>
+      <li>PIOOC: 30 MIN</li>
+    </ul>
+
+    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐆𝐑𝐀𝐕𝐄𝐒</h3>
+    <ul>
+      <li>IOOC: 40 MIN</li>
+      <li>AIOOC: 60 MIN</li>
+      <li>Mentir al Staff: 40 MIN</li>
+      <li>AA: 180 MIN + advertencia obligatoria</li>
+      <li>ER: 180 MIN</li>
+      <li>Pedír la sanción: 180 MIN</li>
+      <li>Recordar rol: 45 MIN</li>
+      <li>Insultar un staff en ticket:
+        <ul>
+          <li>1ra vez: Aislamiento temporal + 60 MIN</li>
+          <li>Reincidencia: 600 MIN</li>
+        </ul>
+      </li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Recomendaciones</h2>
+    <p>Revisá las reglas antes de interactuar en el servidor para evitar sanciones.</p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2026 Proyecto Paisa Roleplay – Todos los derechos reservados</p>
+</footer>
+<script type="module" src="js/main.js"></script>
 </body>
 </html>
+
+
