--- a/normativas.html
+++ b/normativas.html
@@ -32,10 +32,10 @@
   </section>
 
   <section>
-    <h2>Tiempo Sanciones</h2>
+    <h2>Sanciones</h2>
 
-    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐋𝐄𝐕𝐄𝐒</h3>
-    <ul>
+    <h3 class="sancion-leve">𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐋𝐄𝐕𝐄𝐒</h3>
+    <ul class="sancion-list">
       <li>MUD / MUR / MUB / MUPM / MUA: 15 MIN</li>
       <li>RK / TK / FK: 15 MIN</li>
       <li>FA: 15 MIN</li>
@@ -46,8 +46,8 @@
       <li>MUD (repetido): 20 MIN</li>
     </ul>
 
-    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐌𝐄𝐃𝐈𝐀𝐒</h3>
-    <ul>
+    <h3 class="sancion-media">𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐌𝐄𝐃𝐈𝐀𝐒</h3>
+    <ul class="sancion-list">
       <li>TROLL / CJ / BH / BJ / BD / TK: 25 MIN</li>
       <li>ZZ: 15 MIN</li>
       <li>AHQ: 25 MIN</li>
@@ -77,14 +77,15 @@
       <li>PIOOC: 30 MIN</li>
     </ul>
 
-    <h3>𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐆𝐑𝐀𝐕𝐄𝐒</h3>
-    <ul>
+    <h3 class="sancion-grave">𝐒𝐀𝐍𝐂𝐈𝐎𝐍𝐄𝐒 𝐆𝐑𝐀𝐕𝐄𝐒</h3>
+    <ul class="sancion-list">
       <li>IOOC: 40 MIN</li>
       <li>AIOOC: 60 MIN</li>
       <li>Mentir al Staff: 40 MIN</li>
       <li>AA: 180 MIN + advertencia obligatoria</li>
       <li>ER: 180 MIN</li>
       <li>Pedír la sanción: 180 MIN</li>
+      <li>Recordar rol: 45 MIN</li>
       <li>Insultar un staff en ticket:
         <ul>
           <li>1ra vez: Aislamiento temporal + 60 MIN</li>
@@ -106,6 +107,3 @@
 <script type="module" src="js/main.js"></script>
 </body>
 </html>
-
-
-
