--- a/reportar.html
+++ b/reportar.html
@@ -59,7 +59,7 @@
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
     const supabaseUrl = 'https://wgimbwzhxwxmcneekuen.supabase.co'
-    const supabaseKey = 'TU_ANON_KEY_AQUI'
+    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6IndnaW1id3poeHd4bWNuZWVrdWVuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Njc1ODk2NjEsImV4cCI6MjA4MzE2NTY2MX0.79xbkg9rhDdIZoThUvB5IMpT0rqXag1wjzNmoSvR62E'
     const supabase = createClient(supabaseUrl, supabaseKey)
 
     const loginBtn = document.getElementById('login-btn')
@@ -128,5 +128,6 @@
   </script>
 </body>
 </html>
+
 
 
