--- a/panel.html
+++ b/panel.html
@@ -30,7 +30,6 @@
     <p>© 2026 Proyecto Paisa Roleplay – Todos los derechos reservados</p>
   </footer>
 
-  <!-- JS dinámico para cargar reportes desde Supabase -->
   <script type="module">
     import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
 
@@ -40,67 +39,65 @@
 
     const reportesList = document.getElementById('reportes-list')
 
-    if (reportesList) {
-      const fetchReportes = async () => {
-        try {
-          // 1️⃣ Traer reportes
-          const { data: reportes, error: reportesError } = await supabase
-            .from('reportes')
-            .select('*')
-            .order('fecha', { ascending: false })
+    const fetchReportes = async () => {
+      try {
+        // Traer reportes
+        const { data: reportes, error: reportesError } = await supabase
+          .from('reportes')
+          .select('*')
+          .order('fecha', { ascending: false })
 
-          if (reportesError) throw reportesError
+        if (reportesError) throw reportesError
 
-          // 2️⃣ Traer todas las sanciones
-          const { data: sancionesDB, error: sancionesError } = await supabase
-            .from('sanciones')
-            .select('*')
+        if (!reportes || reportes.length === 0) {
+          reportesList.innerHTML = '<p>No hay reportes por mostrar.</p>'
+          return
+        }
 
-          if (sancionesError) throw sancionesError
+        // Traer todas las sanciones para mapear los IDs a nombre+tiempo
+        const { data: sancionesData, error: sancionesError } = await supabase.from('sanciones').select('*')
+        if (sancionesError) throw sancionesError
 
-          if (reportes.length === 0) {
-            reportesList.innerHTML = '<p>No hay reportes por mostrar.</p>'
-            return
+        const sancionesMap = {}
+        sancionesData.forEach(s => {
+          sancionesMap[s.id] = `${s.categoria} - ${s.regla} (${s.tiempo})`
+        })
+
+        // Mostrar reportes
+        reportesList.innerHTML = reportes.map(r => {
+          let sancionesTexto = ''
+          if (r.sanciones && Array.isArray(r.sanciones)) {
+            sancionesTexto = r.sanciones.map(id => sancionesMap[id] || id).join(', ')
           }
 
-          // 3️⃣ Mapear y mostrar reportes
-          reportesList.innerHTML = reportes.map(r => {
-            // Convertir IDs de sanciones en nombre + tiempo
-            let sancionesText = 'N/A'
-            if (Array.isArray(r.sanciones) && r.sanciones.length > 0) {
-              sancionesText = r.sanciones.map(id => {
-                const sanc = sancionesDB.find(s => s.id === parseInt(id))
-                return sanc ? `${sanc.categoria} - ${sanc.regla} (${sanc.tiempo})` : id
-              }).join('; ')
-            }
+          return `
+            <div class="reporte">
+              <p><strong>Usuario que reporta:</strong> ${r.reportante || 'N/A'}</p>
+              <p><strong>Usuario reportado:</strong> ${r.usuario_reportado}</p>
+              <p><strong>Motivo:</strong> ${r.motivo}</p>
+              <p><strong>Contexto:</strong> ${r.contexto || 'N/A'}</p>
+              <p><strong>Descripción:</strong> ${r.descripcion}</p>
+              <p><strong>Evidencia:</strong> ${r.evidencia || 'N/A'}</p>
+              <p><strong>Sanciones:</strong> ${sancionesTexto || 'N/A'}</p>
+              <p><strong>Estado:</strong> ${r.estado}</p>
+              <p><strong>Fecha:</strong> ${new Date(r.fecha).toLocaleString()}</p>
+            </div>
+            <hr>
+          `
+        }).join('')
 
-            return `
-              <div class="reporte">
-                <p><strong>Usuario que reporta:</strong> ${r.reportante || 'N/A'}</p>
-                <p><strong>Usuario reportado:</strong> ${r.usuario_reportado}</p>
-                <p><strong>Motivo:</strong> ${r.motivo}</p>
-                <p><strong>Contexto:</strong> ${r.contexto || 'N/A'}</p>
-                <p><strong>Sanciones seleccionadas:</strong> ${sancionesText}</p>
-                <p><strong>Descripción:</strong> ${r.descripcion}</p>
-                <p><strong>Evidencia:</strong> ${r.evidencia || 'N/A'}</p>
-                <p><strong>Estado:</strong> ${r.estado}</p>
-                <p><strong>Fecha:</strong> ${new Date(r.fecha).toLocaleString()}</p>
-              </div>
-              <hr>
-            `
-          }).join('')
-
-        } catch (error) {
-          console.log('Error cargando reportes:', error)
-          reportesList.innerHTML = '<p>Error cargando reportes.</p>'
-        }
+      } catch (err) {
+        console.log('Error cargando reportes:', err)
+        reportesList.innerHTML = '<p>Error cargando reportes.</p>'
       }
-
-      fetchReportes()
     }
+
+    fetchReportes()
   </script>
 </body>
 </html>
+
+
 
 
 
